ros_motion_planning/scripts/log.txt
/home/lcy/robot_graduation/ros_motion_planning/src/core/path_planner/path_planner/src/sample_planner/proved_apf_planner.cpp:193:26: error: cannot bind non-const lvalue reference of type ‘double&’ to an rvalue of type ‘double’
  193 |   if (!world2Map(px, py, mx, my)) {
      |                          ^~
In file included from /home/lcy/robot_graduation/ros_motion_planning/src/core/path_planner/path_planner/include/path_planner/sample_planner/proved_apf_planner.h:16,
                 from /home/lcy/robot_graduation/ros_motion_planning/src/core/path_planner/path_planner/src/sample_planner/proved_apf_planner.cpp:22:
/home/lcy/robot_graduation/ros_motion_planning/src/core/path_planner/path_planner/include/path_planner/path_planner.h:104:48: note:   initializing argument 3 of ‘bool rmp::path_planner::PathPlanner::world2Map(double, double, double&, double&)’
  104 |   bool world2Map(double wx, double wy, double& mx, double& my);
      |                                        ~~~~~~~~^~
make[2]: *** [core/path_planner/path_planner/CMakeFiles/path_planner.dir/build.make:284：core/path_planner/path_planner/CMakeFiles/path_planner.dir/src/sample_planner/proved_apf_planner.cpp.o] 错误 1
make[2]: *** 正在等待未完成的任务....
make[1]: *** [CMakeFiles/Makefile2:8396：core/path_planner/path_planner/CMakeFiles/path_planner.dir/all] 错误 2
make: *** [Makefile:141：all] 错误 2
Invoking "make -j6 -l6" failed